# mi_py_essentials

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  setup.py
.venv_win/: pyvenv.cfg
.venv_win/Scripts/: activate  activate.bat
mi_py_essentials/: __init__.py  abstract.py  abstract_test.py  active_record.py  active_record_file.py  active_record_file_test.py  async_utils.py  cli_app.py  cli_app_test.py  cli_function.py  cli_function_test.py  cli_functor.py  cmd_app.py  cmd_app_test.py  cmd_proxy.py  cmd_proxy_test.py  code_runner.py  code_runner_test.py  core.py  ext.py  function.py  functor.py  impl.py  in_memory_active_record.py  in_memory_active_record_test.py  interactice_cmd_app.py  interactice_cmd_app_test.py  interactice_cmd_proxy.py  interactice_cmd_proxy_test.py  interactive_cli_function.py  interactive_cli_function_test.py  interface.py  log.py  packager.py  packager_test.py  py_bootloader.py  test.py  tests.py  util.py  venv_creator.py  (+1 more)
mi_py_test/: impl.py  interface.py
