[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mi_py_essentials"
version = "0.3.2"
authors = [
    { name = "Michael Mueller", email = "michaelmuelleronline@gmx.de" }
]
description = "A Python essentials library" # Adjust this to match the actual description if needed
readme = "README.md"
license = { text = "Apache-2.0" } # Specify your license here if available

[project.urls]
"Source Code" = "https://github.com/MichaelMueller/mi_py_essentials_lib.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
# Dynamically loads dependencies from requirements.txt
dependencies = { file = "requirements.txt" }
